hphp/test/slow/reassign_this/1492.php.expectf
HipHop Fatal error: Cannot re-assign $this in %s/hphp/test/slow/reassign_this/1492.php on line 3
